<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleY="1.003"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:scrollX="30dp"
        android:src="@drawable/lunch_blurred" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingStart="15dp"
                android:paddingTop="30dp"
                android:src="@drawable/bowl" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.15"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text="@string/headline"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnLoginFb"
                    android:text="@string/text_facebook_login"
                    android:background="@drawable/btn_facebook_background"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/icon_fb"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"/>
            </FrameLayout>

            <Button
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_google_login"
                android:background="@drawable/btn_google_background"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:drawableStart="@drawable/icon_google"
                android:paddingStart="17dp"
                android:paddingEnd="17dp"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>