<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/tvListRestaurantName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical"
                    android:text="@string/detail_name_placeholder"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvListRestaurantDistance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="0.8"
                    android:gravity="center_vertical"
                    android:text="@string/item_restaurant_distance_placeholder" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvListRestaurantAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical"
                    android:text="@string/detail_address_placeholder" />

                <TextView
                    android:id="@+id/tvListRestaurantNbPeopleEating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:drawableStart="@drawable/ic_outline_person_24"
                    android:gravity="center_vertical"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvListRestaurantOpeningHours"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical"
                    android:text="@string/item_restaurant_openinghours_placeholder"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/ivListRestaurantRating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:paddingEnd="8dp"
                    tools:ignore="ContentDescription,RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivListRestaurantPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/quantum_grey100" />

</LinearLayout>